tests/ui/raw-identifier.stderr
error: invalid format string: expected `}`, found `#`
 --> tests/ui/raw-identifier.rs:4:9
  |
4 | #[error("error: {r#fn}")]
  |         ^^^^^^^^^^^^^^^ expected `}` in format string
  |
  = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: raw identifiers are not supported
  --> tests/ui/raw-identifier.rs:11:30
   |
11 |     let _ = format!("error: {r#fn}");
   |                              --^^
   |                              |
   |                              raw identifier used here in format string
   |                              help: remove the `r#`
   |
   = note: identifiers in format strings can be keywords and don't need to be prefixed with `r#`

error[E0425]: cannot find value `r` in this scope
 --> tests/ui/raw-identifier.rs:4:9
  |
4 | #[error("error: {r#fn}")]
  |         ^^^^^^^^^^^^^^^ not found in this scope
